Fix contrast issue on red tabs, add hover states

--- a/web/themes/new_weather_theme/assets/sass/_uswds-theme.scss
+++ b/web/themes/new_weather_theme/assets/sass/_uswds-theme.scss
@@ -144,9 +144,9 @@ $nws-red: #FF0000;
   $theme-color-accent-warm-lighter: "red-30",
   $theme-color-accent-warm-light: "red-40",
   $theme-color-accent-warm: $nws-red,
-  $theme-color-accent-warm-dark: "red-60",
-  $theme-color-accent-warm-darker: "red-70",
-  $theme-color-accent-warm-darkest: "red-80",
+  $theme-color-accent-warm-dark: "red-50v",
+  $theme-color-accent-warm-darker: "red-70v",
+  $theme-color-accent-warm-darkest: "red-80v",
 
   $theme-color-base-lightest: "gray-cool-3",
   $theme-color-base-lighter: "gray-cool-10",
